# OpenCV

./: README.md  index.md
src/: pages.md
src/c++/01_helloOpenCV/: CMakeLists.txt  README.md
src/c++/01_helloOpenCV/src/: CMakeLists.txt  main.cpp
src/c++/02_helloMayaOpenCV/: CMakeLists.txt  pages.md
src/c++/02_helloMayaOpenCV/src/: CMakeLists.txt  helloMayaOpenCV.cpp  helloMayaOpenCV.h  pluginMain.cpp
src/c++/03_helloQtOpenCV/: CMakeLists.txt  pages.md
src/c++/03_helloQtOpenCV/src/: CMakeLists.txt  helloQtOpenCV.h  helloQtOpenCV.ui  main.cpp  mainWindow.cpp  mainWindow.h
src/c++/04_imagePicker/: CMakeLists.txt  pages.md
src/c++/04_imagePicker/src/: CMakeLists.txt  imagePicker.h  imagePicker.ui  mainWindow.cpp  mainWindow.h
src/c++/05_captureVideoFile/: CMakeLists.txt  pages.md
src/c++/05_captureVideoFile/src/: main.cpp
src/c++/06_captureCamera/: CMakeLists.txt  pages.md
src/c++/06_captureCamera/src/: main.cpp
src/c++/07_saveImage/: CMakeLists.txt  pages.md
src/c++/07_saveImage/src/: main.cpp
src/c++/08_saveVideo/: CMakeLists.txt  pages.md
src/c++/08_saveVideo/src/: main.cpp
src/c++/09_mouseDetection/: CMakeLists.txt
src/c++/09_mouseDetection/src/: main.cpp
src/c++/10_colorDetection/: CMakeLists.txt
src/c++/10_colorDetection/src/: main.cpp
src/c++/11_colorTracking/: CMakeLists.txt
src/c++/11_colorTracking/src/: main.cpp
